FLA-1271: Implement more tests for SCIM and roles (#81)
* fix: add missing signing_key for rogaland idp

* feat: add roles to compliance tests

* fix: loginWithUser missing check for idpSelector if org only has 1 idp

* feat: add patchUser & "var" for ScimUser in ScimFlow

* chore: remove unused findUserByEmail

* feat: add scim tests for "roles", patch users and refactor to use ParameterizedTest

* feat: add mockk & resteasy-core for flais-scim-server tests

* feat: setup test libraries and tasks

* feat: first iteration of unit tests for flais-scim-server

* feat: depend on test task in subproject when running test in parent

* feat: add kover to libs

* refactor: remove unecessary skip flags and bundle in one stage

* feat: setup kover for code coverage

* refactor: clean up code for unit tests

* feat: add more unit tests for scim user endpoint

* fix: dont bundle tests and reports, seperate instead